# linux_maker

./: CONFIG.md  LICENSE  README.md  pyproject.toml
src/: property.json  schedule.py
src/shell/: bridge.sh  buildroot.sh  busybox.sh  crosstool-ng.sh  deploy.sh  env.cfg  func.sh  gdb.sh  include.sh  initialize.sh  job.sh  kernel.sh  nfs.sh  qemu.sh  raspberry-pi-3b.sh  ssh.sh  tftp.sh  uboot.sh
src/toolbox/: configure_tool.py
test/: test_configure_tool.py
test/data/: test-env.cfg
