[tool.poetry]
name = "linux_maker"
version = "0.1.0"
description = ""
authors = ["a"]
readme = "README.md"
packages = [{include = "linux_maker"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
